# The_Middleware

./: README.md
benchmark/: loading.cpp
component_benchmark/: benchmark_result.md
component_benchmark/cuSZp/: compress_bench.cpp
component_benchmark/overall_bench/: README.md  bench_20230919_184001.txt  bench_20230920_120015.txt  bench_20230921_181602_timestep_128_psrn_by_tol.txt  bench_20231118_142710_timestep_128.txt  benchmark.ipynb  image_by_tol.ipynb  interpolate_and_model_eval.ipynb  interpolate_and_model_eval_reduced.ipynb  interpolate_single_perf.ipynb  psnr_by_tol.ipynb  tol_vs_compratio.ipynb  zlib_compress.ipynb
component_benchmark/overall_bench/benchmarks/: bench_20230920_112700_step=0.txt  bench_20230920_120015_step=0.txt  bench_20230921_123213_timestep_128.txt  bench_20230921_153911_timestep_0_lossless_single.txt
component_benchmark/overall_bench/data_analisis/: analyze.ipynb
component_benchmark/overall_bench/tol_vs_psnr_and_compration/: anal.ipynb  bench_20231116_141413_timestep_128_psrn_by_tol.txt
component_benchmark/refactor_cpu_normal/: refactor_test2.cpp
src/python/: Dockerfile  README.md  Singularity.def
src/python/client/: ClientAPI.py  L1_L2Cache.py  L1_L2prefetcher.py  NetInterface.py  Prefetcher.py  UI.py  (+25 more)
test_module/: a.out  compress_hdf5.cpp  high_five_test.cpp  mgard_check.cpp  refactor_test.cpp
test_module/compress_cuda/: CMakeLists.txt  Example.cu
test_module/compress_omp_binary_dump/: compress_hdf5_omp.cpp
test_module/compress_serial/: compress_hdf5_serial.cpp
tools/visualization/: read_hdf5_and_visualize_test.ipynb
(+1456 files in other folders)
